Archive2/45/20066c34fe27ca/output
main.cpp:14:9: error: expected ';' at end of member declaration
     int b
         ^
main.cpp:42:9: error: expected ':' before 'int'
         int d3;
         ^
main.cpp:58:2: warning: extra ';' [-Wpedantic]
 };
  ^
